[package]
name = "donder-release"
version = "1.0.1"
authors = ["Bruno Morgado <bruno@cloudoki.com>"]
description = "Quickly create releases on Github from the command line or CI using conventional commits."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4.23"
regex = "1.7.0"
semver = "1.0.14"
